Change spec runner to run with compiled file

--- a/spec/spec-runner.html
+++ b/spec/spec-runner.html
@@ -39,7 +39,7 @@
         require.config({
             baseUrl: '..',
             paths: {
-                TypeCheck: "src/TypeCheck"
+                TypeCheck: "dist/TypeCheck"
             }
         });
 
