--- a/spec/spec-runner.html
+++ b/spec/spec-runner.html
@@ -33,7 +33,8 @@
         require.config({
             baseUrl: '..',
             paths: {
-                TypeCheck: "dist/jean-type-check"
+                TypeCheck: "dist/jean-type-check",
+                Performance: "node_modules/jean-performance/dist/jean-performance"
             }
         });
 
